[Patch] Fixes z-index

--- a/app/about-us/styles.module.scss
+++ b/app/about-us/styles.module.scss
@@ -79,7 +79,7 @@
   bottom: 0;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1000;
+  z-index: 10;
   background: linear-gradient(180deg, #dbdbd8 0%, #e4e4e0 100%);
   border-radius: 12px;
   font-size: 12px;
